--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Random thoughts
+title: Tristan Brindle
 #email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  (c) Tristan Brindle.
+  Code samples are MIT licensed unless otherwise stated.
+  Attribution is appreciated.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tcbrindle.github.io" # the base hostname & protocol for your site
 twitter_username: tristanbrindle
@@ -23,4 +23,4 @@ markdown: redcarpet
 highlighter: pygments
 
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+  extensions: ["no_intra_emphasis", "smart", "autolink", "tables", "with_toc_data"]
