--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Code samples are MIT licensed unless otherwise stated.
   Attribution is appreciated.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://tcbrindle.github.io" # the base hostname & protocol for your site
+url: "https://tristanbrindle.com" # the base hostname & protocol for your site
 twitter_username: tristanbrindle
 github_username:  tcbrindle
 
